--- a/styles/main/_utility.scss
+++ b/styles/main/_utility.scss
@@ -15,8 +15,7 @@
 }
 
 .highlighted {
-    border: 2px solid cyan;
-    box-sizing: border-box;
+    border-color: cyan;
 }
 
 .wait-cursor {
